# legal-redline-tools

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  skill.md
examples/: sample-redlines.json
legal_redline/: __init__.py  apply.py  cli.py  compare.py  diff.py  markdown.py  memo.py  remap.py  render.py  scan.py  summary.py
tests/: conftest.py  test_apply.py  test_compare.py  test_diff_unique.py  test_normalize.py  test_remap.py  test_summary.py
